src/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: aspnetcore-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: aspnetcore-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - aspnetcore-gateway
  http:
  - route:
    - destination:
        host: app-a-service
        subset: v1
    # retries:
    #   attempts: 3
    #   perTryTimeout: 6s
    #   retryOn: gateway-error,connect-failure,refused-stream

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: aspnetcore-destinationrule
spec:
  host: app-a-service
  # trafficPolicy:
  #   outlierDetection:
  #       consecutive5xxErrors: 5
  #       baseEjectionTime: 30s
  subsets:
  - name: v1
    labels:
      version: v1
